# IoT_Projects

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  candy-lock.c  iot_gateway.c
main/iotGateway/: blecent.c  cmd_iot_gateway.c  cmd_iot_gateway.h  iot_gateway_main.c  iot_gateway_main.h  wifi_station.c  wifi_station.h
main/pc_tools/PC_Exe_debug_tools/: linkJapan_iotGateway.cpp
main/sesame/: ssm.c  ssm.h  ssm_cmd.c  ssm_cmd.h
main/utils/: peer.c
